update persistences
